# Myconvolve

./: .gitignore  CMakeLists.txt  README.md  sample.pgm
include/: Convolution.h  Image.h  Matrix.h  SobelDetector.h  Vec.h  Vector.h
src/: Convolution.cpp  SobelDetector.cpp  main.cpp
